After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 787815 - Interface is not translated
Interface is not translated
Status: RESOLVED FIXED
Product: gnome-calendar
Classification: Applications
Component: General
3.26.x
Other Linux
: Normal critical
: 3.26
Assigned To: GNOME Calendar maintainers
GNOME Calendar maintainers
Depends on:
Blocks:
 
 
Reported: 2017-09-18 02:21 UTC by Piotr Drąg
Modified: 2017-09-20 22:15 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix missing translations (1.04 KB, patch)
2017-09-18 18:49 UTC, Iñigo Martínez
committed Details | Review

Description Piotr Drąg 2017-09-18 02:21:08 UTC
gnome-calendar-3.26.0-1.fc27.x86_64 is all English, all the time. It looks like the app can’t find the .mo files or something.
Comment 1 Iñigo Martínez 2017-09-18 18:49:36 UTC
Created attachment 360009 [details] [review]
Fix missing translations

Gettext support in autotools does define ENABLE_NLS macro to 1 in the autoconf generated configuration file. Due to the migration to the meson build system, this define is missing.

There is no reason to really disable i18n, so this patch removes the condition that binds the text domain.
Comment 2 Georges Basile Stavracas Neto 2017-09-20 22:15:07 UTC
Thanks for the patch.